# ros1_lawn_tractor_ws

./: .~lock.README#  README  frames.gv  processes_before.txt  processes_diff_post_stop.txt  processes_post_stop.txt  ros_starter.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/: .rosinstall  setup.sh
project_notes/: .~lock.Path Planning - Creating a waypoint plan using path_generator.odt#  .~lock.teb_planner_footprint_helper.ods#  05-serial.rules  2023 milestone and BOM.ods  Laptop setup - Install Jeff’s simulator (2023).odt  Laptop setup - Step 1 Install ROS on laptop (2022 version).odt  Laptop setup - Step 1 Install ROS on laptop (2023 version).odt  Laptop setup - Step 1 Install ROS on laptop (2024 version).odt  Navigation - adjusting steering parameters in simulation.odt  Operations - Lawn Tractor Startup Procedure - 2023.odt  Operations - Lawn Tractor Startup Procedure - 2024.odt  Path Planning - Boustrophedon path creation notes.odt  Path Planning - Creating a waypoint plan using path_generator.odt  Path Planning - Notes on steps.odt  Path Planning - euler from quaternion notes.odt  Path Planning – Using rosbag files to create a polygon for coverage map input.odt  ROS - Notes on streamlined simulated world.odt  Test steering control - old.docx  Test steering control 2023.odt  Test transmission and speed control - old.docx  Testing notes 20230316.odt  Tuning - Getting the rotation from driving a circle.odt  Tuning - PID Tuning for Steering.odt  debug20240702.xml  debug20240715.xml  debug20240805.xml  debug20240827.xml  debug20240904.xml  debugging_cmd_vel.xml  generated_points_for_square.txt  gui_first_thoughts.odp  imu_debug.xml  my_quaternion2.py  planningNotes.docx  plotjuggler_review_odom.xml  robot_description_2_circle_approach.odp  sheet to field test speed.ods  skytraq gps units.odp  (+4 more)
project_notes/code_for_testing/cpp path sender did not work/: CMakeLists.txt  mbf_mission_simple.cpp  package.xml
(+818 files in other folders)
