<?xml version="1.0"?>
<package format="2">
  <name>ackermann_vehicle</name>
  <version>0.0.0</version>
  <description>The ackermann_vehicle package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aej2126@pm.me">al</maintainer>
  <author email="aej2126@pm.me">Al</author>
  <url type="website">https://github.com/jones2126/tractor_laptop_ROS_workspace</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

 <!--  <depend>cmake_modules</depend> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>mbf_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
